{
    "name": "CameraInput",
    "maps": [
        {
            "name": "Camera",
            "id": "d1a35b4d-25e6-4b24-9868-0ec2958e02a5",
            "actions": [
                {
                    "name": "Input5",
                    "type": "Button",
                    "id": "b6114009-6139-4e8f-ac64-cbca3bbd9e67",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Input4",
                    "type": "Button",
                    "id": "03675a50-f0d4-42ab-9fab-04d6f4bca60f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Input3",
                    "type": "Button",
                    "id": "69a2c3fd-7348-4fc0-8f5e-b4691f47a60e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Input2",
                    "type": "Button",
                    "id": "a65e95e3-37e9-4298-84d1-3c8b302bf8fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Input1",
                    "type": "Button",
                    "id": "f673b99e-cda8-4bff-919a-ffcc2d4e251e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2b4461a1-9433-453b-87cf-ca0ad77a5691",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Input1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1c1cf89-6179-4ba7-8bab-858625f01d05",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Input2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e7fdbdf-8ed8-4b04-9727-301e6f8d1cdf",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Input3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aca324a5-b75e-436c-b4ee-150020aa3620",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Input4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d074602-be4f-486d-8493-40d07b7516b7",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Input5",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KM",
            "bindingGroup": "KM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}